force-app/main/default/objects/CustomURLs__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom setting to hold configuration for ask Monash community</description>
    <fields>
        <fullName>Available_Object_for_Review_Batch__c</fullName>
        <label>Available Object for Review Batch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_Home_Page__c</fullName>
        <label>Community Home Page</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailToCaseNonHR__c</fullName>
        <label>EmailToCaseNonHR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailToCase__c</fullName>
        <label>EmailToCase</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Body_Seperator__c</fullName>
        <label>Email Body Seperator</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exclude_Token__c</fullName>
        <label>Exclude Token</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Help_URL__c</fullName>
        <label>Help URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MonCon_Private_Limited_Queue_Id__c</fullName>
        <description>Record Id of MonCon Private Limited Queue</description>
        <label>MonCon Private Limited Queue Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MonCon_Private_Limited_RecordType__c</fullName>
        <description>Recordtype Id of MonCon Private Limited</description>
        <label>MonCon Private Limited RecordType</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monash_Search_URL__c</fullName>
        <label>Monash Search URL</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PageSizeTopicDetail__c</fullName>
        <label>PageSize Topic Detail</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pagination_Size__c</fullName>
        <label>Pagination Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Permission_Set_for_Assignment_Rule__c</fullName>
        <label>Permission Set for Assignment Rule</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_for_Assignment_Rule__c</fullName>
        <label>Profile for Assignment Rule</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Roles_for_Assignment_Rule__c</fullName>
        <label>Roles for Assignment Rule</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSO_URL__c</fullName>
        <label>SSO URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SearchResultsPageSize__c</fullName>
        <description>SearchResultsPageSize value determines the number of records to be shown in Search Page</description>
        <label>SearchResultsPageSize</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Special_Consideration_Limited_Queue__c</fullName>
        <label>Special Consideration Limited Queue</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Consideration_Limited_RecordType__c</fullName>
        <label>Special Consideration Limited RecordType</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ToName__c</fullName>
        <label>To Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>attachmentLink__c</fullName>
        <label>attachmentLink</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>replacement_url_suffix__c</fullName>
        <label>replacement url suffix</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>standard_url_suffix__c</fullName>
        <label>standard url suffix</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Community Settings</label>
</CustomObject>